<resources>
    <string name="app_name">TestPresso</string>
    <string name="title_activity_bravo">BravoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="happy_testing">Happy testing</string>
    <string name="ok">Ok</string>
    <string name="title_activity_test">TestActivity</string>
</resources>