...
 Come back in 20 minutes to receive new Hearts.</string>
    <string name="_1">1</string>
    <string name="tulip">Tulip</string>
    <string name="_4_5">4/5</string>
    <string name="stage_4_5">stage 4/5</string>
    <string name="_3_30">3/30</string>
    <string name="ok">OK</string>
    <string name="nice_work_lets_move_to_next_lesson">Nice work, lets move to next lesson !</string>
    <string name="you_can_change_the_app_settings_in_this_screen">You can change the app settings in this screen.</string>
    <string name="plant_collection">Plant Collection</string>
    <string name="settings">Settings</string>
    <string name="well_done_n_nkeep_going">Well done!\n\nKeep going.</string>
    <string name="skip">Skip</string>
...
